# mortar

./: .gitignore  LICENSE  Makefile  README.md  auth.go  brick.go  config.go  frontend.go  go.mod  go.sum  hodconfig.yml  loadgen.go  main.go  mkdocs.yml  prototool.yaml  stage.go  timeseries.go  validation.go
cmd/: xbosmain.go
container/: Dockerfile
containers/frontend/: Dockerfile
containers/frontend/static/frontpage/: index.html
containers/frontend/static/frontpage/css/: vuetify.min.css
containers/hoddb/: Dockerfile
containers/mortar-server/: mortarconfig.yml
containers/pymortar-client/: Dockerfile  additional.sh  example.py  generate-ssl.sh  requirements.txt  start.sh
docs/: contributing.md  index.md  pymortar.md  quick-start.md
docs/analytics/: index.md
frontend/: .gitignore  main.go
frontend/static/frontpage/css/: site.css
frontend/static/frontpage/js/: app.js  mdal_grpc_web_pb.js  swagger-client.js  vuetify.js
frontend/static/landing/: index.html
frontend/static/login/: index.html
proto/: mortar.pb.go  mortar.proto  mortar_pb2.py  mortar_pb2_grpc.py  prototool.yaml
pydocs/source/: conf.py  index.rst  pymortar.rst
python/pymortar/: pyproject.toml
python/pymortar/pymortar/: __init__.py  mortar_pb2.py  mortar_pb2_grpc.py  result.py
stages/: auth.go  brick.go  config.go  frontend.go  grpc_wave_frontend.go  influxdb.go  loadgen.go  prometheus.go  request.go  stage.go  timeseries.go  validation.go  wavemq.go
tools/: generate_docs.sh
tools/load_test_data/: README.md  load_test_data.go
(+2 files in other folders)
